[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ei"
version = "0.0.14"
description = "Automatically embed IPython into arbitrary stack frames in traceback."
readme = "README.md"
requires-python = ">=3.5"
license = {text = "MIT"}
authors = [
    {name = "Yuankui Lee", email = "toregenerate@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "IPython",
]

[project.urls]
"Homepage" = "https://github.com/djosix/ei"
"Bug Tracker" = "https://github.com/djosix/ei/issues"
