[metadata]
name = ei
version = 0.0.7
author = Yuankui Lee
author_email = toregenerate@gmail.com
description = Automatically embed IPython into arbitrary stack frames in traceback.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/djosix/ei
project_urls =
    Bug Tracker = https://github.com/djosix/ei/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
install_requires =
    IPython

[options.packages.find]
where = src
